# mvc

./: CMakeLists.txt  Doxyfile  Doxyfile.in
.github/workflows/: release.yml  static.yml
project_mvc/: CMakeLists.txt  main.cpp
project_mvc/core/: controller.cpp  controller.hpp  model.cpp  model.hpp  view.cpp  view.hpp
project_mvc/graphic/: graphic.hpp
project_mvc/objects/: IShape.hpp  baseShape.cpp  baseShape.hpp  circle.cpp  circle.hpp  dot.cpp  dot.hpp
project_mvc/observer/: observer.hpp
project_mvc/tools/: fabrick.hpp  tools.hpp
